name:
  cereal-plus
version:
  0.1.0
synopsis:
  Extended serialization library on top of 'cereal'.
description:
  Provides non-orphan instances for an extended range of types.
  Provides transformer types and support for mutable data.
  Reapproaches the naming conventions of 'cereal' library.
license:
  MIT
license-file:
  LICENSE
homepage:
  https://github.com/nikita-volkov/cereal-plus 
bug-reports:
  https://github.com/nikita-volkov/cereal-plus/issues 
author:
  Nikita Volkov <nikita.y.volkov@mail.ru>
maintainer:
  Nikita Volkov <nikita.y.volkov@mail.ru>
copyright:
  (c) 2013, Nikita Volkov
category:
  Serialization
build-type:
  Simple
cabal-version:
  >=1.10


source-repository head
  type:
    git
  location:
    git://github.com/nikita-volkov/cereal-plus.git


library
  hs-source-dirs:
    src
  exposed-modules:
    CerealPlus
    CerealPlus.SerializableM
    CerealPlus.DeserializeT
    CerealPlus.SerializeT
  other-modules:
    CerealPlus.Prelude
  build-depends:
    cereal == 0.4.*,
    errors,
    time,
    hashable,
    hashtables,
    unordered-containers,
    vector,
    array,
    containers,
    text,
    bytestring,
    mtl,
    base >= 4.5 && < 5
  default-extensions:
    Arrows
    DeriveGeneric
    ImpredicativeTypes
    BangPatterns
    PatternGuards
    GADTs
    StandaloneDeriving
    MultiParamTypeClasses
    ScopedTypeVariables
    FlexibleInstances
    TypeFamilies
    TypeOperators
    FlexibleContexts
    NoImplicitPrelude
    EmptyDataDecls
    DataKinds
    NoMonomorphismRestriction
    RankNTypes
    ConstraintKinds
    DefaultSignatures
    TupleSections
    OverloadedStrings
    TemplateHaskell
    QuasiQuotes
    DeriveDataTypeable
    GeneralizedNewtypeDeriving
    RecordWildCards
    MultiWayIf
    LiberalTypeSynonyms
    LambdaCase
  default-language:
    Haskell2010

